@@ -40,8 +40,7 @@ enum
 #define TFB_GFXFLAGS_SHOWFPS            (1<<1)
 #define TFB_GFXFLAGS_SCANLINES          (1<<2)
 #define TFB_GFXFLAGS_SCALE_BILINEAR     (1<<3)
-#define TFB_GFXFLAGS_SCALE_SAI          (1<<4)
-#define TFB_GFXFLAGS_SCALE_SUPERSAI     (1<<5)
+#define TFB_GFXFLAGS_SCALE_BIADAPT      (1<<4)
 
 
 int TFB_InitGraphics (int driver, int flags, int width, int height, int bpp);
